platform/kustomize/_common/tests/ingress/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

# Lab environment overlay - includes all capabilities and supporting applications
resources:
  - private.yaml
  - public.yaml
  
components:
  - ../../../_common/components/ingress-management

configMapGenerator:
  - name: ingress-environment-config
    namespace: argocd
    behavior: add
    literals:
      - localDomainSuffix=lab.local.ctoaas.co
      - publicDomainSuffix=lab.ctoaas.co
      - ingressClass=traefik
      - tlsEnabled=letsencrypt-prod
      - annotations=cert-manager.io/cluster-issuer=letsencrypt-prod

generatorOptions:
  disableNameSuffixHash: true
