platform/kustomize/_common/tests/ingress/private.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress-private
  namespace: argocd
  labels:
    ingress.ctoaas.co/managed: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: sample
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-server
            port:
              name: http
